--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       </tr>
       <tr>
         <td>
-          <p>-</p>
+          <p>이종혁</p>
         </td>
         <td>
-          <a href="./-.html">Link</a>
+          <a href="./ljh.html">Link</a>
         </td>
       </tr>
       <tr>
