--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </tr>
       <tr>
         <td>
-          <p>김도영</p>
+          <p>-</p>
         </td>
         <td>
           <a href="./kdy.html">Link</a>
@@ -42,10 +42,10 @@
       </tr>
       <tr>
         <td>
-          <p>-</p>
+          <p>전광휘</p>
         </td>
         <td>
-          <a href="./-.html">Link</a>
+          <a href="./jkh.html">Link</a>
         </td>
       </tr>
     </table>
