--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </tr>
       <tr>
         <td>
-          <p>-</p>
+          <p>김도영</p>
         </td>
         <td>
           <a href="./kdy.html">Link</a>
